FEAT: Add new database datasheet.

--- a/melanoma_phd/config/database_config.yaml
+++ b/melanoma_phd/config/database_config.yaml
@@ -1962,4 +1962,12 @@ sections:
                 categories:
                     0: "no"
                     1: "yes increase"
+    
+    - Indice articuloIPI-NIVO:
+        name: "Indice articuloIPI-NIVO"
+        sheets:
+            - "Indice articuloIPI-NIVO"
+        variables:
+
+    
 
