FEAT: Add new database sheet.

--- a/melanoma_phd/config/database_config.yaml
+++ b/melanoma_phd/config/database_config.yaml
@@ -1990,5 +1990,11 @@ sections:
             - "Indice articuloIPI-NIVO"
         variables:
 
+    - RECISTportemporalidad:
+        name: "RECISTportemporalidad"
+        sheets:
+            - "RECISTportemporalidad"
+        variables:
+
     
 
